Linked Recipes Pages to index.html

--- a/recipes/kulfi.html
+++ b/recipes/kulfi.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kulfi</title>
+    <a href="../index.html">Home</a>
 </head>
 <body>
     <h1>Kulfi</h1>
+    <img width="300px" src="https://www.allrecipes.com/thmb/byr7roJ1mf6M_Gt0KbbiYQlloDs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/736349-kulfi-Leisha-1x1-1-27872b0a38bc4766bdb3217d3a7f214f.jpg" alt="Kulfi Image">
+
+    <br>
+
+    <h2>Description</h2>
+    <p>Kulfi is a delicious Indian ice cream dessert. I got this simple but delicious recipe for kulfi from my sister-in-law. I have made it several times, and it always gets rave reviews - even the kids love it! Add a few drops of rose water or some ground pistachios for a different flavor.</p>
+
+    <br>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 ¼ cups evaporated milk</li>
+        <li>1 ¼ cups sweetened condensed milk</li>
+        <li>1 (16 ounce) container frozen whipped topping, thawed</li>
+        <li>4 slices white bread, torn into pieces</li>
+        <li>½ teaspoon ground cardamom</li>
+    </ul>
+
+    <br>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine evaporated milk, condensed milk, and whipped topping in a blender and blend in pieces of bread until smooth.</li>
+        <li>Pour mixture into a 9x13-inch baking dish or two plastic ice cube trays, sprinkle with cardamom and freeze for 8 hours or overnight.</li>
+    </ol>
 </body>
 </html>
